# bh1745-python

./: .coveragerc  CHANGELOG.md  README.md  install.sh  pyproject.toml  test.py  uninstall.sh
bh1745/: __init__.py
documentation/: REFERENCE.md
examples/: README.md  detect.py  hex-colour.py  raw-colour.py  setup.cfg  two-sensors.py
tests/: test_features.py  test_setup.py  tools.py
